# discord-streamable-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build.yaml  lint.yaml  test.yaml
src/: discord_client.rs  lib.rs  main.rs  streamable_client.rs
tests/: integration_test.rs
