[package]
name = "discord-streamable-bot"
version = "0.1.2"
authors = ["Dominik Kus <dominik@kdtk.de>"]
edition = "2021"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
regex = "1"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
sanitize-filename = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serenity = { version = "0.11", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
